Write up GRIT project details

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               some attributes of the old one, but with a more energetic and
               sleeker feeling.
             </p>
-            <div class="grid two-columns img-height-180">
+            <div class="grid two-columns contain-img-height-180">
               <figure>
                 <img
                   src="./src/media/avid/old_avid_logo.jpeg"
@@ -256,11 +256,11 @@
             </p>
             <figure>
               <img
-                class="small-image"
+                class="img-height-180"
                 src="./src/media/amoriem/new_logo.png"
                 alt="Amoriem Labs' new logo"
               />
-              <figcaption class="img-height-100">The new logo</figcaption>
+              <figcaption>The new logo</figcaption>
             </figure>
           </div>
         </div>
@@ -296,7 +296,7 @@
           </div>
         </div>
         <div class="thumbnail" onclick="showOverlay('grit-overlay')">
-          <img src="./src/media/grit_thumbnail.jpg" alt="GRIT Logo" />
+          <img src="./src/media/grit/grit_thumbnail.jpg" alt="GRIT Logo" />
         </div>
         <div id="grit-overlay" class="project-overlay">
           <div class="overlay-panel">
@@ -308,18 +308,44 @@
                 <i class="fa-solid fa-xmark"></i>
               </button>
             </div>
-            <h2 class="text-center mb">Afternoon Cupcakes Logo</h2>
+            <h2 class="text-center mb">GRIT - Logo</h2>
             <p>
-              As an exercise, I challenged myself to make a logo for a bakery,
-              and came up with this. I did this back in high school, but I still
-              think it's cute. I remember being pleased with the font at the
-              time (Abril Fatface if you're curious).
+              In high school I started to see a lot of graphic design content on
+              social media, and felt inspired to practice some new techniques. I
+              wanted to try my hand at creating a wordmark for a logo from
+              scratch - that is, by constructing the letters myself rather than
+              using a pre-existing typeface. In order to do that, I created a
+              grid system and a set of rules that each letter would follow. One
+              rule (or guideline, really) was that each letter should have at
+              least one segment where its outline extended past the corner.
             </p>
-            <div class="centered-column">
+            <figure>
               <img
-                src="./src/media/cupcakes_thumbnail.png"
-                alt="Afternoon Cupcakes Logo"
+                class="img-height-220"
+                src="./src/media/grit/grid_system.jpg"
+                alt="Underlying grid structure of GRIT logo"
               />
+            </figure>
+            <p>
+              In keeping with the theme suggested by the word ‘grit’, and again
+              inspired by trends on social media, I worked with some texture
+              assets to get an effect that I thought worked well.
+            </p>
+            <div class="centered-row">
+              <figure>
+                <img
+                  src="./src/media/grit/first_texture.jpg"
+                  alt="An early attempt at using texture for the GRIT logo"
+                />
+                <figcaption>Early attempt at incorporating texture</figcaption>
+              </figure>
+              <figure>
+                <img
+                  src="./src/media/grit/grit_thumbnail.jpg"
+                  alt="Final GRIT logo"
+                />
+                <figcaption>Final result</figcaption>
+              </figure>
             </div>
           </div>
         </div>
