Write up Gaming Counters project details

--- a/index.html
+++ b/index.html
@@ -280,18 +280,96 @@
                 <i class="fa-solid fa-xmark"></i>
               </button>
             </div>
-            <h2 class="text-center mb">Afternoon Cupcakes Logo</h2>
+            <h2 class="text-center mb">
+              Yale Collections: 18th Century Chinese Gaming Tokens
+            </h2>
             <p>
-              As an exercise, I challenged myself to make a logo for a bakery,
-              and came up with this. I did this back in high school, but I still
-              think it's cute. I remember being pleased with the font at the
-              time (Abril Fatface if you're curious).
+              In the fall of my junior year of college, I took a course called
+              Graphic Design Methodologies. One of the larger projects we were
+              asked to produce was to produce a set of promotional materials for
+              a hypothetical exhibition of something from the Yale Collections. 
+              After some digging, I came across a collection of Chinese
+              mother-of-pearl gaming counters from the 18th and 19th centuries.
+              If you’re interested in learning about the history of these
+              pieces, I highly recommend reading more about it here:
+              <a
+                href="https://hdl.handle.net/10079/fa/beinecke.gamingcounters"
+                target="_blank"
+              >
+                https://hdl.handle.net/10079/fa/beinecke.gamingcounters
+              </a>
             </p>
-            <div class="centered-column">
+            <p>
+              At first, I was unsure how I would entice people to come view the
+              exhibition. There were many potential angles of attack. I thought,
+              for instance, that I might try to create materials that emphasized
+              the multi-cultural history of these artifacts, which originated in
+              China but mainly used in the West. But considering the wide array
+              of materials I was to produce, and thinking about the hypothetical
+              audience of these materials (busy college students barely glancing
+              at bulletin boards), I decided on a more sensational approach.
+              When I had initially visited the Beinecke Library to view the
+              collection and take photos, I was interested in the unique shapes
+              of many of the tokens, and in the iridescence of the
+              mother-of-pearl surface. I decided to see what I could do to
+              emphasize these qualities. Iridescence is a hard thing to capture
+              in a static photo, since its effect is only noticed when a surface
+              is viewed from a variety of angles.
+            </p>
+            <p>
+              We were asked to produce a series of flyers, postcards,
+              promotional instagram posts, and finally a mockup of an
+              installation to be shown along with the artifacts.
+            </p>
+            <h3>Postcards</h3>
+            <div class="grid two-columns mb">
               <img
-                src="./src/media/cupcakes_thumbnail.png"
-                alt="Afternoon Cupcakes Logo"
+                src="./src/media/gaming_counters/postcard1.1.png"
+                alt="First version of promotional postcard, 1/2"
               />
+              <img
+                src="./src/media/gaming_counters/postcard2.1.png"
+                alt="First version of promotional postcard, 2/2"
+              />
+              <img
+                src="./src/media/gaming_counters/postcard1.3.png"
+                alt="Second version of promotional postcard, 1/2"
+              />
+              <img
+                src="./src/media/gaming_counters/postcard2.3.png"
+                alt="Second version of promotional postcard, 2/2"
+              />
+            </div>
+            <h3>Flyers</h3>
+            <div class="centered-row mb">
+              <img
+                src="./src/media/gaming_counters/flyer1.png"
+                alt="Promotional flyer 1"
+              />
+              <img
+                src="./src/media/gaming_counters/flyer2.png"
+                alt="Promotional flyer 2"
+              />
+              <img
+                src="./src/media/gaming_counters/flyer3.png"
+                alt="Promotional flyer 3"
+              />
+            </div>
+            <h3>Installation Mockup</h3>
+            <p>
+              I created a video showing what it might look like to have a
+              blown-up image of one of the tokens, with a lenticular effect,
+              such that at certain angles, an image of the family who owned this
+              token would appear.
+            </p>
+            <div class="centered-row">
+              <video width="640" height="360" loop autoplay>
+                <source
+                  src="./src/media/gaming_counters/beinecke_exhibition.mp4"
+                  type="video/mp4"
+                />
+                Your browser does not support the video tag.
+              </video>
             </div>
           </div>
         </div>
