Write up NMG project details

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         </div>
         <div class="thumbnail" onclick="showOverlay('nmg-overlay')">
           <img
-            src="./src/media/nmg_thumbnail.png"
+            src="./src/media/nmg/nmg_thumbnail.png"
             alt="New Matrix Group Logo"
           />
         </div>
@@ -443,17 +443,26 @@
                 <i class="fa-solid fa-xmark"></i>
               </button>
             </div>
-            <h2 class="text-center mb">Afternoon Cupcakes - Logo</h2>
+            <h2 class="text-center mb">New Matrix Group - Logo</h2>
             <p>
-              As an exercise, I challenged myself to make a logo for a bakery,
-              and came up with this. I did this back in high school, but I still
-              think it's cute. I remember being pleased with the font at the
-              time (Abril Fatface if you're curious).
+              While helping build some of the underlying data pipelines for a
+              business intelligence startup, I decided to take a bit of time to
+              create a logo for the company, since we did not have one yet. I
+              wanted to match the tone of our pitches to potential clients. Many
+              of the clients were mid-size clothing retailers that had been
+              using the same business intelligence solutions for many years, so
+              we wanted to emphasize that with our solutions, we could provide
+              easier access and deeper insights into a company’s accounting and
+              sales statistics.
             </p>
-            <div class="centered-column">
+            <div class="centered-column contain-img-height-180">
               <img
-                src="./src/media/cupcakes_thumbnail.png"
-                alt="Afternoon Cupcakes Logo"
+                src="./src/media/nmg/nmg_thumbnail.png"
+                alt="New Matrix Group logo, condensed"
+              />
+              <img
+                src="./src/media/nmg/nmg_large_with_bg.png"
+                alt="New Matrix Group logo, extended"
               />
             </div>
           </div>
