Add hyperlinks to Gaming Counters project details

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
               In the fall of my junior year of college, I took a course called
               Graphic Design Methodologies. One of the larger projects we were
               asked to produce was to produce a set of promotional materials for
-              a hypothetical exhibition of something from the Yale Collections. 
+              a hypothetical exhibition of something from <a href="https://www.yale.edu/collections" target="_blank">the Yale Collections.</a> 
               After some digging, I came across a collection of Chinese
               mother-of-pearl gaming counters from the 18th and 19th centuries.
               If you’re interested in learning about the history of these
@@ -308,7 +308,7 @@
               of materials I was to produce, and thinking about the hypothetical
               audience of these materials (busy college students barely glancing
               at bulletin boards), I decided on a more sensational approach.
-              When I had initially visited the Beinecke Library to view the
+              When I had initially visited the <a href="https://beinecke.library.yale.edu/" target="_blank"></a>Beinecke Library</a> to view the
               collection and take photos, I was interested in the unique shapes
               of many of the tokens, and in the iridescence of the
               mother-of-pearl surface. I decided to see what I could do to
