Add hyperlinks to Gaming Counters project details

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
               of materials I was to produce, and thinking about the hypothetical
               audience of these materials (busy college students barely glancing
               at bulletin boards), I decided on a more sensational approach.
-              When I had initially visited the <a href="https://beinecke.library.yale.edu/" target="_blank"></a>Beinecke Library</a> to view the
+              When I had initially visited the <a href="https://beinecke.library.yale.edu/" target="_blank">Beinecke Library</a> to view the
               collection and take photos, I was interested in the unique shapes
               of many of the tokens, and in the iridescence of the
               mother-of-pearl surface. I decided to see what I could do to
