Add lazy loading attribute to most things

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                 <img
                   src="./src/media/avid/old_avid_logo.jpeg"
                   alt="Old AVID Fitness logo"
+                  loading="lazy"
                 />
                 <figcaption>Old logo</figcaption>
               </figure>
@@ -106,18 +107,19 @@
                 <img
                   src="./src/media/avid/blue_on_white.jpg"
                   alt="New AVID Fitness logo, white on blue background"
+                  loading="lazy"
                 />
                 <figcaption>New logo</figcaption>
               </figure>
             </div>
             <figure>
               <div class="grid funky-grid-1">
-                <img src="./src/media/avid/profile_pic_2.png" />
-                <img src="./src/media/avid/post1.png" />
-                <img src="./src/media/avid/story1.png" />
-                <img src="./src/media/avid/post4.png" />
-                <img src="./src/media/avid/multi-image.png" />
-                <img src="./src/media/avid/post2.png" />
+                <img src="./src/media/avid/profile_pic_2.png" loading="lazy" />
+                <img src="./src/media/avid/post1.png" loading="lazy" />
+                <img src="./src/media/avid/story1.png" loading="lazy" />
+                <img src="./src/media/avid/post4.png" loading="lazy" />
+                <img src="./src/media/avid/multi-image.png" loading="lazy" />
+                <img src="./src/media/avid/post2.png" loading="lazy" />
               </div>
               <figcaption class="mt">
                 Social media templates and brand assets
@@ -141,14 +143,17 @@
               <img
                 src="./src/media/avid/homepage_screenshot.jpg"
                 alt="AVID Homepage"
+                loading="lazy"
               />
               <img
                 src="./src/media/avid/contact_screenshot.jpg"
                 alt="AVID Contact Form"
+                loading="lazy"
               />
               <img
                 src="./src/media/avid/classes_screenshot.jpg"
                 alt="AVID CLasses Widget using MindBody"
+                loading="lazy"
               />
             </div>
           </div>
@@ -180,6 +185,7 @@
               <img
                 src="./src/media/cupcakes_thumbnail.png"
                 alt="Afternoon Cupcakes Logo"
+                loading="lazy"
               />
             </div>
           </div>
@@ -229,10 +235,12 @@
               <img
                 src="./src/media/amoriem/logo_landscape_icon.png"
                 alt="Amoriem logo with icon in landscape orientation"
+                loading="lazy"
               />
               <img
                 src="./src/media/amoriem/logo_portrait_icon.png"
                 alt="Amoriem logo with icon in portrait orientation"
+                loading="lazy"
               />
             </div>
             <p>
@@ -259,6 +267,7 @@
                 class="img-height-180"
                 src="./src/media/amoriem/new_logo.png"
                 alt="Amoriem Labs' new logo"
+                loading="lazy"
               />
               <figcaption>The new logo</figcaption>
             </figure>
@@ -287,8 +296,10 @@
               In the fall of my junior year of college, I took a course called
               Graphic Design Methodologies. One of the larger projects we were
               asked to produce was to produce a set of promotional materials for
-              a hypothetical exhibition of something from <a href="https://www.yale.edu/collections" target="_blank">the Yale Collections.</a> 
-              After some digging, I came across a collection of Chinese
+              a hypothetical exhibition of something from
+              <a href="https://www.yale.edu/collections" target="_blank"
+                >the Yale Collections.</a
+              >  After some digging, I came across a collection of Chinese
               mother-of-pearl gaming counters from the 18th and 19th centuries.
               If you’re interested in learning about the history of these
               pieces, I highly recommend reading more about it here:
@@ -308,9 +319,12 @@
               of materials I was to produce, and thinking about the hypothetical
               audience of these materials (busy college students barely glancing
               at bulletin boards), I decided on a more sensational approach.
-              When I had initially visited the <a href="https://beinecke.library.yale.edu/" target="_blank">Beinecke Library</a> to view the
-              collection and take photos, I was interested in the unique shapes
-              of many of the tokens, and in the iridescence of the
+              When I had initially visited the
+              <a href="https://beinecke.library.yale.edu/" target="_blank"
+                >Beinecke Library</a
+              >
+              to view the collection and take photos, I was interested in the
+              unique shapes of many of the tokens, and in the iridescence of the
               mother-of-pearl surface. I decided to see what I could do to
               emphasize these qualities. Iridescence is a hard thing to capture
               in a static photo, since its effect is only noticed when a surface
@@ -326,18 +340,22 @@
               <img
                 src="./src/media/gaming_counters/postcard1.1.png"
                 alt="First version of promotional postcard, 1/2"
+                loading="lazy"
               />
               <img
                 src="./src/media/gaming_counters/postcard2.1.png"
                 alt="First version of promotional postcard, 2/2"
+                loading="lazy"
               />
               <img
                 src="./src/media/gaming_counters/postcard1.3.png"
                 alt="Second version of promotional postcard, 1/2"
+                loading="lazy"
               />
               <img
                 src="./src/media/gaming_counters/postcard2.3.png"
                 alt="Second version of promotional postcard, 2/2"
+                loading="lazy"
               />
             </div>
             <h3>Flyers</h3>
@@ -345,14 +363,17 @@
               <img
                 src="./src/media/gaming_counters/flyer1.png"
                 alt="Promotional flyer 1"
+                loading="lazy"
               />
               <img
                 src="./src/media/gaming_counters/flyer2.png"
                 alt="Promotional flyer 2"
+                loading="lazy"
               />
               <img
                 src="./src/media/gaming_counters/flyer3.png"
                 alt="Promotional flyer 3"
+                loading="lazy"
               />
             </div>
             <h3>Installation Mockup</h3>
@@ -363,7 +384,7 @@
               token would appear.
             </p>
             <div class="centered-row">
-              <video width="640" height="360" loop autoplay>
+              <video preload="auto" width="640" height="360" loop autoplay>
                 <source
                   src="./src/media/gaming_counters/beinecke_exhibition.mp4"
                   type="video/mp4"
@@ -402,6 +423,7 @@
                 class="img-height-220"
                 src="./src/media/grit/grid_system.jpg"
                 alt="Underlying grid structure of GRIT logo"
+                loading="lazy"
               />
             </figure>
             <p>
@@ -414,6 +436,7 @@
                 <img
                   src="./src/media/grit/first_texture.jpg"
                   alt="An early attempt at using texture for the GRIT logo"
+                  loading="lazy"
                 />
                 <figcaption>Early attempt at incorporating texture</figcaption>
               </figure>
@@ -421,6 +444,7 @@
                 <img
                   src="./src/media/grit/grit_thumbnail.jpg"
                   alt="Final GRIT logo"
+                  loading="lazy"
                 />
                 <figcaption>Final result</figcaption>
               </figure>
@@ -459,10 +483,12 @@
               <img
                 src="./src/media/nmg/nmg_thumbnail.png"
                 alt="New Matrix Group logo, condensed"
+                  loading="lazy"
               />
               <img
                 src="./src/media/nmg/nmg_large_with_bg.png"
                 alt="New Matrix Group logo, extended"
+                  loading="lazy"
               />
             </div>
           </div>
@@ -473,23 +499,89 @@
       <div class="section-heading">
         <h2>Programming Work</h2>
       </div>
-      <div class="project-card">
+      <div class="project-card" onclick="showOverlay('alien-egg-overlay')">
         <div class="project-text">
-          <h2>"Brain-Rock-Thing"</h2>
-          <p>This is filler text to be replaced later</p>
+          <h2>"Alien Egg" Sculpture</h2>
+          <p>
+            An interactive sculpture built with clay, ultrasonic sensors, and
+            sleep deprivation.
+          </p>
         </div>
         <img
-          src="./src/media/brain_rock_thumbnail.png"
-          alt="Brain-Rock-Thing sculpture"
+          src="./src/media/alien_egg/brain_rock_thumbnail.png"
+          alt="Alien Egg sculpture"
         />
+      </div>
+      <div id="alien-egg-overlay" class="project-overlay">
+        <div class="overlay-panel">
+          <div class="fixed-wrapper">
+            <button
+              class="close-overlay"
+              onclick="hideOverlay('alien-egg-overlay')"
+            >
+              <i class="fa-solid fa-xmark"></i>
+            </button>
+          </div>
+          <h2>"Alien Egg" Sculpture</h2>
+          <p>
+            I built this sculpture for an exhibition of artwork by Yale college
+            seniors. I had no prior experience with any of the materials I used
+            - I had never made anything with clay, and more technically
+            challenging, I had never built a physical circuit before or had any
+            experience with
+            <a href="https://en.wikipedia.org/wiki/Arduino" target="_blank"
+              >Arduinos</a
+            >.
+          </p>
+          <p>
+            I went into the project a bit unsure of what I was going to build,
+            but after a few sessions at the pottery studio, and several
+            all-nighters at the maker-space on campus, the project started to
+            take literal and conceptual shape.
+          </p>
+          <p>
+            What I ended up making was a small clay vessel, about the size of a
+            football, with many holes along the surface. I crammed a bunch of
+            LED strips inside, connected via an Arduino circuit to an ultrasonic
+            sensor.
+          </p>
+          <figure>
+            <img
+              class="img-height-420"
+              src="./src/media/alien_egg/wide_angle.jpg"
+              alt="Wide angle shot of the Alien Egg sculpture in the gallery"
+            />
+            <figcaption>The egg sitting in its enclave</figcaption>
+          </figure>
+          <p>
+            I placed the sculpture on a pedestal, tucked away under the
+            staircase in one of the showrooms of the gallery. As members of the
+            audience approached the sculpture, the ultrasonic sensor would read
+            the distance to the nearest person. This information was fed through
+            the circuit such that as people approached the sculpture, the LED
+            strips would shine brighter, and as they moved away, the lights
+            would dim.
+          </p>
+          <div class="centered-column contain-img-height-220">
+            <img
+              src="./src/media/alien_egg/close_up.jpg"
+              alt="Close-up shot of Alien Egg sculpture"
+            />
+            <video width="640" height="360" controls loop>
+              <source
+                src="./src/media/alien_egg/demonstration.mp4"
+                type="video/mp4"
+              />
+              Your browser does not support the video tag.
+            </video>
+            <figcaption>Video of the sculpture in action</figcaption>
+          </div>
+        </div>
       </div>
       <div class="project-card">
         <div class="project-text">
           <h2>High Noon</h2>
-          <p>
-            This one was a video game or something whatever man I'm going to
-            replace this text when I make the actual site ok
-          </p>
+          <p>filler</p>
         </div>
         <img
           src="./src/media/high_noon_thumbnail.png"
