Set preloading=none for Alien Egg demonstration video

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
               token would appear.
             </p>
             <div class="centered-row">
-              <video preload="auto" width="640" height="360" loop autoplay>
+              <video width="640" height="360" loop autoplay>
                 <source
                   src="./src/media/gaming_counters/beinecke_exhibition.mp4"
                   type="video/mp4"
@@ -483,12 +483,12 @@
               <img
                 src="./src/media/nmg/nmg_thumbnail.png"
                 alt="New Matrix Group logo, condensed"
-                  loading="lazy"
+                loading="lazy"
               />
               <img
                 src="./src/media/nmg/nmg_large_with_bg.png"
                 alt="New Matrix Group logo, extended"
-                  loading="lazy"
+                loading="lazy"
               />
             </div>
           </div>
@@ -522,7 +522,7 @@
               <i class="fa-solid fa-xmark"></i>
             </button>
           </div>
-          <h2>"Alien Egg" Sculpture</h2>
+          <h2 class="text-center mb">"Alien Egg" Sculpture</h2>
           <p>
             I built this sculpture for an exhibition of artwork by Yale college
             seniors. I had no prior experience with any of the materials I used
@@ -567,7 +567,7 @@
               src="./src/media/alien_egg/close_up.jpg"
               alt="Close-up shot of Alien Egg sculpture"
             />
-            <video width="640" height="360" controls loop>
+            <video preload="none" width="640" height="360" controls loop muted>
               <source
                 src="./src/media/alien_egg/demonstration.mp4"
                 type="video/mp4"
