Provide link to Alien Egg github repo

--- a/index.html
+++ b/index.html
@@ -545,6 +545,13 @@
             LED strips inside, connected via an Arduino circuit to an ultrasonic
             sensor.
           </p>
+          <p>
+            <a
+              href="https://github.com/material-kish/arduino_gold"
+              target="_blank"
+              >Link to GitHub repo of Arduino scripts for this project</a
+            >
+          </p>
           <figure>
             <img
               class="img-height-420"
