Lazy loading on High Noon images

--- a/index.html
+++ b/index.html
@@ -627,14 +627,17 @@
           </p>
           <div class="centered-column mt">
             <img
+              loading="lazy"
               src="./src/media/high_noon/cowboy_1.jpg"
               alt="Screenshot from High Noon 1/3"
             />
             <img
+              loading="lazy"
               src="./src/media/high_noon/cowboy_2.jpg"
               alt="Screenshot from High Noon 2/3"
             />
             <img
+              loading="lazy"
               src="./src/media/high_noon/cowboy_3.jpg"
               alt="Screenshot from High Noon 3/3"
             />
