Fix contact section for mobile

--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
     <div class="section-heading">
       <h2>Contact</h2>
     </div>
-    <div class="contact-section">
+    <div class="contact-section mb">
       <a
         href="mailto:ja%63ob%66e%69t%6Dann@gm%61%69l.com"
         target="_blank"
