Fix some problems with specific overlays

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2>– Programming Work –</h2>
       </a>
     </div>
-    <div class="centered-row mt mb" id="contact-icons">
+    <div class="mt mb" id="contact-icons">
       <a href="https://www.instagram.com/i.love.kishka/" target="_blank"
         ><i class="fa-brands fa-instagram"></i
       ></a>
@@ -384,7 +384,7 @@
               token would appear.
             </p>
             <div class="centered-row">
-              <video width="640" height="360" loop autoplay>
+              <video loop autoplay>
                 <source
                   src="./src/media/gaming_counters/beinecke_exhibition.mp4"
                   type="video/mp4"
